# dt501g-inlupp1

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  svar.txt  task11.c  task2.c  task3.c  task5.c  task6.c  task7.c  task8.c  task9.c  task_1.c  task_10  task_10.c  task_11.c  task_2  task_2.c  task_3  task_3.c  task_4  task_4.c  task_5  task_5.c  task_6  task_6.c  task_7  task_7.c  task_8  task_8.c  task_9
